# project-euler

./: .gitignore  README.md  mypy.ini  pyproject.toml
euler/: fibon.py  primes.py  utils.py
euler/tests/: test_fibon.py  test_primes.py  test_utils.py
problems/: 001.py  002.py  003.py  004.py  005.py  006.py  007.py  008.py  009.py  010.py  011.py  012.py  013.py  014.py  015.py  016.py  017.py  018.py  019.py  020.py  021.py  022.py  023.py  024.py  025.py  026.py  027.py  028.py  029.py  030.py  035.py  036.py  037.py  040.py  042.py  043.py  044.py  050.py  056.py  067.py  (+1 more)
