[tool.poetry]
name = "euler"
version = "0.1.0"
description = ""
authors = ["DueViktor <viktorduep@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
